--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .container{
     width: 100%;
     min-height: 100vh;
-    background-image: url('images/bg1.jpg');
+    background-image: url('bg1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     padding: 10px;
@@ -74,7 +74,7 @@ ul li::before{
     position: absolute;
     height: 28px;
     width: 28px;
-    background-image: url('images/unchecked.png');
+    background-image: url('unchecked.png');
     background-size: cover;
     background-position: center;
     top: 8px;
@@ -87,7 +87,7 @@ ul li.checked{
 }
 
 ul li.checked::before{
-    background-image: url('images/checked.png');
+    background-image: url('checked.png');
 }
 ul li span{
     position: absolute;
